feat(lookup_endpoint) : add lookup endpoint to new server structure and open api integration
- Add lookup endpoint application logic and test files
- Add lookup endpoint http logic and test files
- Add lookup endpoint to open api file structure
- Integrate lookup endpoint to server file

--- a/api/openapi/paths/non_admin/request-bodies.yaml
+++ b/api/openapi/paths/non_admin/request-bodies.yaml
@@ -12,3 +12,18 @@ components:
                 description: 'Serialized transaction data (e.g., a binary format such as Protobuf or other)'
             required:
               - Transaction
+    
+    LookupQuestionBody:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              service:
+                type: string
+                description: 'The name of the service'
+              query:
+                type: object
+                description: 'The query data as JSON'
+            required:
+              - service
