--- a/api/openapi/errors/responses.yaml
+++ b/api/openapi/errors/responses.yaml
@@ -29,6 +29,26 @@ components:
           schema:
             $ref: '#/components/schemas/Error'
 
+    UnauthorizedResponse:
+      description: |
+        Authentication is required but was not provided or is invalid.
+        This error occurs when the client attempts to access a protected resource
+        without providing the required authentication credentials.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
+    ForbiddenResponse:
+      description: |
+        The server understood the request, but refuses to authorize it.
+        This error occurs when the client has valid authentication but does not have
+        the necessary permissions to access the requested resource.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
     InternalServerErrorResponse:
       description: |
         An unexpected condition was encountered on the server, causing the request to fail.
@@ -42,7 +62,16 @@ components:
     RequestTimeoutResponse:
       description: |
         The server did not receive a complete request within the time it was prepared to wait. 
-        This error can occur if the client’s request takes too long to process or there is network latency.
+        This error can occur if the client's request takes too long to process or there is network latency.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+            
+    GatewayTimeoutResponse:
+      description: |
+        The server, while acting as a gateway or proxy, did not receive a timely response
+        from the upstream server or some other auxiliary server it needed to access in order to complete the request.
       content:
         application/json:
           schema:
