feat(lookup_service_documentation) : Add support for for lookup service documentation endpoint
feat(open_api) :Add support to open api non admin for lookup service documentation GET endpoint
feat(lookup_documentation_service) : Add application logic for lookup documentation endpoint, and appropriate tests.
feat(lookup_documentation_handler) : Add http logic for lookup documentation endpoint, and appropriate tests.
feat(server_http): Import lookup documentation endpoint to new server file

--- a/docs/api/openapi/bundled.yaml
+++ b/docs/api/openapi/bundled.yaml
@@ -34,6 +34,35 @@ paths:
                   - Message
         '500':
           $ref: '#/paths/~1api~1v1~1submit/post/responses/500'
+  /api/v1/getDocumentationForLookupServiceProvider:
+    get:
+      tags:
+        - non-admin
+      operationId: GetLookupServiceProviderDocumentation
+      parameters:
+        - in: query
+          name: lookupService
+          schema:
+            type: string
+          required: true
+          description: The name of the lookup service to retrieve documentation for
+      responses:
+        '200':
+          description: Returns the documentation for the specified lookup service
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  documentation:
+                    type: string
+                    description: Markdown-formatted documentation for the lookup service
+                required:
+                  - documentation
+        '400':
+          $ref: '#/paths/~1api~1v1~1submit/post/responses/400'
+        '500':
+          $ref: '#/paths/~1api~1v1~1submit/post/responses/500'
   /api/v1/submit:
     post:
       tags:
