feat(topic_manager_documentation) : Add support for topic manager documentation endpoint
feat(open_api) :Add support to open api non admin for topic manager documentation GET endpoint
feat(topic_manager_documentation_service) : Add application logic for topic manager documentation endpoint, and appropriate tests.
feat(topic_manager_documentation_handler) : Add http logic for topic manager documentation endpoint, and appropriate tests.
feat(server_http): Import topic manager documentation endpoint to new server file

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -28,6 +28,26 @@ paths:
         500:
           $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
 
+  /api/v1/getDocumentationForTopicManager:
+    get:
+      tags:
+        - non-admin
+      operationId: GetTopicManagerDocumentation
+      parameters:
+        - in: query
+          name: topicManager
+          schema:
+            type: string
+          required: true
+          description: The name of the topic manager to retrieve documentation for
+      responses:
+        200:
+          $ref: '../paths/non_admin/responses.yaml#/components/responses/TopicManagerDocumentationResponse'
+        400:
+          $ref: '../errors/responses.yaml#/components/responses/BadRequestResponse'
+        500:
+          $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
+
   /api/v1/submit:
     post:
       tags:
