feat(topic_manager_list) : Add support for for topic manager list endpoint
feat(open_api) :Add support to open api non admin for topic manager list GET endpoint
feat(topic_manager_list_service) : Add application logic for topic manager list endpoint, and appropriate tests.
feat(topic_manager_list_handler) : Add http logic for topic manager list endpoint, and appropriate tests.
feat(server_http): Import topic manager list endpoint to new server file

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -41,6 +41,31 @@ components:
       required:
         - STEAK
 
+    TopicManagerMetadata:
+      type: object
+      properties:
+        name:
+          type: string
+        shortDescription:
+          type: string
+        iconURL:
+          type: string
+          nullable: true
+        version:
+          type: string
+          nullable: true
+        informationURL:
+          type: string
+          nullable: true
+      required:
+        - name
+        - shortDescription
+
+    TopicManagersList:
+      type: object
+      additionalProperties:
+        $ref: "#/components/schemas/TopicManagerMetadata"
+
   responses:
     SubmitTransactionResponse:
       description: |
@@ -49,3 +74,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
+            
+            
+    TopicManagersListResponse:
+      description: |
+        A map of topic managers with their metadata
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/TopicManagersList'
