feat(start_GASP_sync) : Add support for start GASP sync endpoint
feat(open_api) :Add support to open api admin for start GASP sync endpoint
feat(start_GASP_sync_service) : Add application logic for start GASP sync endpoint, and appropriate tests.
feat(start_GASP_sync_handler) : Add http logic for start GASP sync endpoint, and appropriate tests.
feat(server_http): Import start GASP sync endpoint to new server file

--- a/docs/api/openapi/bundled.yaml
+++ b/docs/api/openapi/bundled.yaml
@@ -34,6 +34,28 @@ paths:
                   - Message
         '500':
           $ref: '#/paths/~1api~1v1~1submit/post/responses/500'
+  /api/v1/admin/startGASPSync:
+    post:
+      tags:
+        - admin
+      operationId: StartGASPSync
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: |
+            GASP sync request successfully started.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required:
+                  - message
+        '500':
+          $ref: '#/paths/~1api~1v1~1submit/post/responses/500'
   /api/v1/submit:
     post:
       tags:
