feat(request_foreign_GASP_node) : Add support for request foreign GASP node endpoint
feat(open_api) :Add support to open api non admin for request forieng GASP node endpoint
feat(request_foreign_GASP_node_service) : Add application logic for request foreign GASP node endpoint, and appropriate tests.
feat(request_foreign_GASP_node_handler) : Add http logic for request foreign GASP node endpoint, and appropriate tests.
feat(server_http): Import request foreign GASP node endpoint to new server file

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -40,6 +40,10 @@ components:
           $ref: "#/components/schemas/STEAK"
       required:
         - STEAK
+        
+    GASPNode:
+      type: object
+      description: A GASP node representation from the overlay engine
 
   responses:
     SubmitTransactionResponse:
@@ -49,3 +53,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
+            
+    RequestForeignGASPNodeResponse:
+      description: |
+         Overlay engine successfully provided the requested foreign GASP node.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GASPNode'
