feat(request_sync_response) : Add support for request sync response endpoint
feat(open_api) :Add support to open api non admin for request sync response endpoint
feat(request_sync_response_service) : Add application logic for request sync response endpoint, and appropriate tests.
feat(request_sync_response_handler) : Add http logic for request sync response endpoint, and appropriate tests.
feat(server_http): Import request sync response endpoint to new server file

--- a/api/openapi/paths/non_admin/request-bodies.yaml
+++ b/api/openapi/paths/non_admin/request-bodies.yaml
@@ -12,3 +12,19 @@ components:
                 description: 'Serialized transaction data (e.g., a binary format such as Protobuf or other)'
             required:
               - Transaction
+
+    RequestSyncResponseBody:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              version:
+                type: integer
+                description: 'The version number of the GASP protocol'
+              since:
+                type: integer
+                description: 'Timestamp or sequence number from which to start synchronization'
+            required:
+              - version
+              - since
