feat(lookup) : Add support for lookup endpoint
feat(open_api) :Add support to open api non admin for lookup endpoint
feat(lookup_service) : Add application logic for lookup endpoint, and appropriate tests.
feat(lookup) : Add http logic for lookup endpoint, and appropriate tests.
feat(server_http): Import lookup endpoint to new server file

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -40,6 +40,16 @@ components:
           $ref: "#/components/schemas/STEAK"
       required:
         - STEAK
+        
+    LookupAnswer:
+      type: object
+      properties:
+        answer:
+          type: object
+          description: 'The answer data for the lookup question'
+          additionalProperties: true
+      required:
+        - answer
 
   responses:
     SubmitTransactionResponse:
@@ -49,3 +59,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
+            
+    LookupQuestionResponse:
+      description: |
+        Overlay engine successfully processed the lookup question and returned an answer.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/LookupAnswer'
