feat(lookup_service_documentation) : Add support for for arc-ingest endpoint
feat(open_api) :Add support to open api non admin for arc-ingest endpoint
feat(arc_ingest_service) : Add application logic for arc ingest endpoint, and appropriate tests.
feat(arc_ingest_handler) : Add http logic for arc-ingest endpoint, and appropriate tests.
feat(server_http): Import arc-ingest endpoint to new server file
feat(arc_ingest_middleware): Add middleware for arc ingest handler endpoint and appropriate tests.

--- a/api/openapi/errors/responses.yaml
+++ b/api/openapi/errors/responses.yaml
@@ -42,7 +42,16 @@ components:
     RequestTimeoutResponse:
       description: |
         The server did not receive a complete request within the time it was prepared to wait. 
-        This error can occur if the client’s request takes too long to process or there is network latency.
+        This error can occur if the client's request takes too long to process or there is network latency.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+            
+    GatewayTimeoutResponse:
+      description: |
+        The server was acting as a gateway or proxy and did not receive a timely response from the upstream server.
+        This error occurs when the server is waiting for a response from another server, but the request times out.
       content:
         application/json:
           schema:
