--- a/api/openapi/paths/admin/responses.yaml
+++ b/api/openapi/paths/admin/responses.yaml
@@ -8,6 +8,19 @@ components:
       required:
         - Message
 
+    ArcIngest:
+      type: object
+      properties:
+        status:
+          type: string
+          example: 'success'
+        message:
+          type: string
+          example: 'Transaction status updated'
+      required:
+        - status
+        - message
+
   responses:
     AdvertisementsSyncResponse:
       description: |
@@ -16,3 +29,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/AdvertisementsSync'
+            
+    ArcIngestResponse:
+      description: |
+         Merkle proof successfully processed and transaction status updated.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ArcIngest'
