--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -26,7 +26,7 @@ paths:
         200:
           $ref: '../paths/admin/responses.yaml#/components/responses/AdvertisementsSyncResponse'
         500:
-          $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
+          $ref: '#/components/responses/InternalServerErrorResponse'
 
   /api/v1/submit:
     post:
@@ -50,14 +50,63 @@ paths:
         200:
           $ref: '../paths/non_admin/responses.yaml#/components/responses/SubmitTransactionResponse'
         400:
-          $ref: '../errors/responses.yaml#/components/responses/BadRequestResponse'
+          $ref: '#/components/responses/BadRequestResponse'
         500:
-          $ref: '../errors/responses.yaml#/components/responses/InternalServerErrorResponse'
+          $ref: '#/components/responses/InternalServerErrorResponse'
         409:
-          $ref: '../errors/responses.yaml#/components/responses/RequestTimeoutResponse'
+          $ref: '#/components/responses/RequestTimeoutResponse'
 
 components:
+  schemas:
+    Error:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          description: Human-readable error message
+
   securitySchemes:
     bearerAuth:
       type: http 
       scheme: bearer
+      
+  responses:
+    BadRequestResponse:
+      description: |
+        The server cannot process the request due to malformed syntax or invalid input. 
+        This error is typically caused by client-side issues, such as missing required parameters, 
+        invalid data formats, or incorrect request structures.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
+    NotFoundResponse:
+      description: |
+        The requested resource could not be found. This error occurs when the client
+        requests an endpoint or resource that does not exist on the server or cannot be located.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
+    InternalServerErrorResponse:
+      description: |
+        An unexpected condition was encountered on the server, causing the request to fail.
+        This error is typically caused by internal issues such as server misconfigurations, 
+        database failures, or unhandled exceptions.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
+    RequestTimeoutResponse:
+      description: |
+        The server did not receive a complete request within the time it was prepared to wait. 
+        This error can occur if the client’s request takes too long to process or there is network latency.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
