--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -16,10 +16,16 @@ tasks:
       - npm install -g swagger-cli
     silent: true
 
+  swagger-doc-gen:
+    desc: "Bundle OpenAPI spec."
+    cmds:
+      - swagger-cli bundle {{.OPENAPI_FILE}} -o {{.SWAGGER_FILE}} -t yaml
+    silent: true 
+
   swagger-ui-up:
     desc: "Bundle OpenAPI spec and start Swagger UI with Docker Compose."
     cmds:
-      - swagger-cli bundle {{.OPENAPI_FILE}} -o {{.SWAGGER_FILE}} -t yaml
+      - task swagger-doc-gen
       - swagger-cli validate {{.OPENAPI_FILE}}
       - docker-compose up -d
     silent: true
@@ -27,7 +33,7 @@ tasks:
   swagger-ui-down:
     desc: "Bundle OpenAPI spec and stop Swagger UI containers."
     cmds:
-      - swagger-cli bundle {{.OPENAPI_FILE}} -o {{.SWAGGER_FILE}} -t yaml
+      - task swagger-doc-gen
       - docker-compose down
     silent: true
 
