refactor: move arc-ingest to non admin route
- Move arc-ingest endpoint to non admin route in open api files

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -40,6 +40,19 @@ components:
           $ref: "#/components/schemas/STEAK"
       required:
         - STEAK
+        
+    ArcIngest:
+      type: object
+      properties:
+        status:
+          type: string
+          example: 'success'
+        message:
+          type: string
+          example: 'Transaction status updated'
+      required:
+        - status
+        - message
 
   responses:
     SubmitTransactionResponse:
@@ -49,3 +62,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
+            
+    ArcIngestResponse:
+      description: |
+         Merkle proof successfully processed and transaction status updated.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ArcIngest'
