--- a/docs/api/openapi/overlay-services.yaml
+++ b/docs/api/openapi/overlay-services.yaml
@@ -18,7 +18,8 @@ paths:
         - admin
       operationId: AdvertisementsSync
       security:
-        - bearerAuth: []
+        - bearerAuth:
+            - admin
       responses:
         '200':
           description: |
@@ -39,6 +40,9 @@ paths:
       tags:
         - non-admin
       operationId: SubmitTransaction
+      security:
+        - bearerAuth:
+            - user
       parameters:
         - in: header
           name: x-topics
